lintian (2.5.5) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - control-file-contains-dh_make-vcs-comment
      - debhelper-compat-file-is-missing
      - dependency-is-not-multi-archified
      - dh-exec-install-not-allowed-here
      - dh-exec-private-helper
      - dh-exec-script-without-dh-exec-features
      - dh-exec-subst-unknown-variable
      - executable-debhelper-file-without-being-executable
      - package-file-is-executable
      - package-uses-dh-exec-but-lacks-build-depends
      - preinst-uses-dpkg-maintscript-helper-without-predepends
      - shlib-in-multi-arch-foreign-package
      - source-contains-waf-binary
      - syntax-error-in-control-file
      - syntax-error-in-debconf-template
    + Removed:
      - dh_dhelp-is-deprecated
      - maintainer-not-full-name
      - maintainer-script-calls-deprecated-wm-menu-config
      - maintainer-script-does-not-check-for-existence-of-wm-menu-config
      - uploader-address-missing
      - uploader-not-full-name

  * checks/*:
    + [NT] Fixed assumptions about certain fields being present.
      Where needed, Lintian will make guesses to the most likely
      value (or the least "broken" value).
  * checks/binaries:
    + [NT] Allow libnss_* plugins in usr/lib.
  * checks/control-file{,.desc}:
    + [NT] Allow "pkg (= ${source:Version})" versioned dependency if
      pkg is architecture all.  This fixes a false-positive
      "weak-library-dev-dependency" for some mono packages.  Thanks
      to David Bremner for the report.  (Closes: #652602)
    + [NT] Emit a tag if there is a syntax error in d/control rather
      than just aborting the rest of the check.
    + [NT] Accepted patch from Gergely Nagy to catch dh-make vcs
      templates in comments.  Thanks to Paul Wise for suggesting this
      check.  (Closes: #657110)
  * checks/cruft{,.desc}:
    + [NT] Added dh-autoreconf as a build-depends alternative to
      libtool for suppressing ancient-libtool warning.  Thanks to