@@ -1,0 +1,7 @@
+#include <stdio.h>
+
+int
+lib_interface(void)
+{
+    printf("Hello world!\n");
+}
