@@ -1,0 +1,1 @@
+E: libbasic2: arch-dependent-file-not-in-arch-specific-directory usr/lib/libbasic.so.2
